--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -2,14 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-      <!-- ==== SEO + SOCIAL META TAGS  (FINAL CLEAN VERSION) ============ -->
   <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
 
+  <!-- SEO -->
   <meta name="description"
         content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
-
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
   <!-- Open Graph -->
@@ -18,175 +17,311 @@
   <meta property="og:description"
         content="A reflection on belief, truth, and the courage to live with mystery.">
   <meta property="og:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
-  <meta property="og:image:alt" content="Cover of The Paradox of God by Ninox Antolihao">
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
   <meta property="og:url"
         content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-    <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
-  <meta name="twitter:description"
-        content="A reflection on belief, truth, and the silence that teaches.">
-  <meta name="twitter:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg">
+  <link rel="icon" href="/reflections/assets/favicon.ico" />
 
-    <!-- JSON-LD -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org",
-    "@type": "Article",
-    "headline": "The Paradox of God — Solitude Reflections",
-    "author": {
-      "@type": "Person",
-      "name": "Ninox Antolihao"
-    },
-    "image": "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod.jpg",
-    "publisher": {
-      "@type": "Organization",
-      "name": "Stone Grill Press",
-      "logo": {
-        "@type": "ImageObject",
-        "url": "https://stonegrillresto.net/reflections/assets/logo1.PNG"
+  <!-- Shared header styles -->
+  <link rel="stylesheet" href="/reflections/assets/reflections-header.css" />
+
+  <style>
+    /* ===== Page theme (warm, bookish) ===== */
+    :root{
+      --bg:#1f1815;
+      --paper:#2a211e;
+      --ink:#f3e6dd;
+      --muted:#c9b0a4;
+      --accent:#ffb873;
+      --accent-soft:#412017;
+      --rule:#6b4b3c;
+    }
+
+    html,body{
+      margin:0;
+      padding:0;
+      background:var(--bg);
+      color:var(--ink);
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+                   sans-serif;
+    }
+
+    .page-shell{
+      max-width:900px;
+      margin:0 auto 4rem auto;
+      padding:5.5rem 1.2rem 3rem;  /* leave room for fixed header */
+      box-sizing:border-box;
+    }
+
+    @media (min-width:768px){
+      .page-shell{
+        padding:6.5rem 0 4rem;
       }
-    },
-    "description":
-      "A quiet reflection on belief, truth, and the humility of embracing mystery.",
-    "mainEntityOfPage":
-      "https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html"
-  }
-  </script>
+    }
 
-        <!-- =============UNIFIED REFLECTIONS CSS ====================== -->
-  <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=23">
+    .reading-card{
+      background:var(--paper);
+      border-radius:18px;
+      padding:2rem 1.5rem 2.5rem;
+      box-shadow:0 18px 40px rgba(0,0,0,.45);
+      line-height:1.7;
+      font-size:1.02rem;
+    }
 
+    @media (min-width:768px){
+      .reading-card{
+        padding:2.5rem 2.7rem 3rem;
+        font-size:1.06rem;
+      }
+    }
+
+    h1{
+      font-family: "Georgia","Times New Roman",serif;
+      margin:0 0 .4rem;
+      font-size:2.1rem;
+      letter-spacing:.02em;
+    }
+
+    .subtitle{
+      font-family:"Georgia","Times New Roman",serif;
+      font-style:italic;
+      color:var(--muted);
+      margin-bottom:2rem;
+      font-size:.98rem;
+    }
+
+    p{
+      margin:0 0 1.15rem;
+    }
+
+    .dropcap:first-letter{
+      float:left;
+      font-size:2.7rem;
+      line-height:1;
+      padding-right:.27rem;
+      padding-top:.16rem;
+      font-family:"Georgia","Times New Roman",serif;
+      color:var(--accent);
+    }
+
+    hr{
+      border:none;
+      border-top:1px solid var(--rule);
+      margin:1.8rem 0;
+    }
+
+    /* ===== Audio block with track list ===== */
+    .audio-shell{
+      margin:0 auto 2.2rem auto;
+      max-width:900px;
+    }
+
+    .audio-player{
+      background:#151010;
+      border-radius:18px 18px 0 0;
+      padding:1.1rem 1.4rem;
+      box-shadow:0 16px 40px rgba(0,0,0,.55);
+      border:1px solid #000;
+      border-bottom:none;
+    }
+
+    .audio-player audio{
+      width:100%;
+      display:block;
+    }
+
+    .track-list{
+      background:#1d1411;
+      border-radius:0 0 18px 18px;
+      border:1px solid #000;
+      border-top:1px solid #2a1a13;
+      box-shadow:0 18px 40px rgba(0,0,0,.65);
+      overflow:hidden;
+    }
+
+    .track-row{
+      display:flex;
+      align-items:flex-start;
+      justify-content:space-between;
+      width:100%;
+      text-align:left;
+      padding:1rem 1.4rem 1.05rem;
+      gap:.9rem;
+      border:none;
+      background:transparent;
+      color:var(--ink);
+      cursor:pointer;
+      font:inherit;
+      border-bottom:1px solid rgba(255,255,255,.04);
+    }
+
+    .track-row:last-child{
+      border-bottom:none;
+    }
+
+    .track-main{
+      font-family:"Georgia","Times New Roman",serif;
+      font-size:1.02rem;
+      font-weight:600;
+    }
+
+    .track-meta{
+      font-size:.86rem;
+      color:var(--muted);
+      margin-top:.22rem;
+    }
+
+    .track-duration{
+      font-size:.9rem;
+      white-space:nowrap;
+      margin-left:auto;
+      padding-top:.25rem;
+      color:var(--muted);
+    }
+
+    .track-row.is-active{
+      background:var(--accent-soft);
+      box-shadow:inset 0 0 0 1px rgba(255,184,115,.55);
+    }
+
+    .track-row.is-active .track-duration{
+      color:var(--ink);
+    }
+
+    .track-row:active{
+      transform:scale(.99);
+    }
+
+    /* Small helper below header so the title doesn't hide under it */
+    .page-spacer{
+      height:0;
+      margin-top:4.7rem;
+    }
+
+    @media (min-width:768px){
+      .page-spacer{
+        margin-top:5.3rem;
+      }
+    }
+  </style>
 </head>
-
-
 <body>
 
-        <!-- =========UNIFIED HEADER PLACEHOLDER  (auto-loaded by JS) ======= -->
-  <div id="ref-header-placeholder"></div>
+  <!-- Fixed shared header injected by JS -->
+  <div id="reflectionsHeader"
+       data-current="the-paradox-of-god"></div>
 
+  <div class="page-spacer"></div>
 
-  <main class="page-content">
-
-    <header class="ms-header">
-  <div class="ms-top">
-    <div class="ms-logo">
-      <img src="/reflections/assets/logo1.PNG" alt="Moments of Solitude" />
-      <div class="ms-title-group">
-        <h2>MOMENTS OF SOLITUDE</h2>
-        <span>Stone Grill Reflections</span>
-      </div>
+  <!-- ===== Audio + track list ===== -->
+  <section class="audio-shell">
+    <div class="audio-player">
+      <audio id="reflectionAudio" controls preload="metadata">
+        <source id="audioSource"
+                src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
+                type="audio/mpeg">
+        Your browser does not support the audio element.
+      </audio>
     </div>
 
-    <div class="ms-controls">
-      <button onclick="history.back()">Back</button>
-      <button onclick="shareReflection()">Share</button>
-      <button onclick="document.getElementById('reflectionAudio').scrollIntoView({behavior:'smooth'})">Audio</button>
-      <span class="ms-current">△ The Paradox of God</span>
-    </div>
-  </div>
-
-  <ul class="ms-nav">
-  <li><a href="/reflections/index.html">HOME</a></li>
-  <li><a href="/reflections/pages/divine-hiddeness/read.html" class="active">Divine Premise</a></li>
-  <li><a href="/reflections/pages/subconsciousmind/read.html">The Subconscious Mind</a></li>
-  <li><a href="/reflections/pages/the-god-we-created/read.html">The God We Created</a></li>
-  <li><a href="/reflections/pages/the-paradox-of-god/read.html">The Paradox of God</a></li>
-  <li><a href="/reflections/pages/the-inner-listener/read.html">The Prayer</a></li>
-  <li><a href="/reflections/pages/transcendence/read.html">Transcendence</a></li>
-  <li><a href="/reflections/pages/the-madness-of-fath/read.html">The Madness of Faith</a></li>
-  <li><a href="/reflections/pages/the-lost-language-of-metaphor/read.html">The Lost Language of Metaphor</a></li>
-  <li><a href="/reflections/pages/belief/read.html">BELIEF AND GOODNESS</a></li>
-  <li><a href="/reflections/pages/question-label-sinner/read.html">Seeking Asurance is Labeled A Sinner</a></li>
-  <li><a href="/reflections/pages/initial-premise/read.html">The initial Premise of a Perfect Loving God</a></li>
-  <li><a href="/reflections/pages/diety/read.html">THE DEITY</a></li>
-  <li><a href="/reflections/pages/question-label-sinner/read.html">Labeled Sinner</a></li>
-  <li><a href="/reflections/pages/silent-influence/read.html">Silent Influence</a></li>
-  <li><a href="/reflections/pages/oneness-duality/read.html">Oneness Duality</a></li>
-  <li><a href="/reflections/pages/mirror-of-worship/read.html">The Mirror of Worship</a></li>
-</ul>
-
-</header>
-
-
-          <!-- AUDIO PLAYER + PLAYLIST -->
-      <section class="audio-wrap">
-        <div class="audio-wrapper">
-          <audio id="reflectionAudio" controls preload="metadata">
-            <source id="audioSource" src="" type="audio/mpeg">
-            Your browser does not support the audio element.
-          </audio>
-
-          <div class="playlist">
-            <div class="playlist-row active"
-                 data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3">
-              <div class="playlist-main">
-                <div class="playlist-title">The Paradox of God</div>
-                <div class="playlist-sub">Belief is the bridge we build across uncertainty — but truth is the ocean beneath it. We walk on belief because we fear the deep — the unknown, the silence, the mystery</div>
-              </div>
-              <div class="playlist-duration">--:--</div>
-            </div>
-
-            <div class="playlist-row"
-               data-src="/reflections/pages/transcendence/theshieldoftranscendence.mp3">
-            <div class="playlist-main">
-              <div class="playlist-title">The Shield Of Transcendence (Alternate Voice)</div>
-              <div class="playlist-sub">Unwraveling the enigma of absolute Truth</div>
-            </div>
-            <div class="playlist-duration"> 4:33</div>
-            </div>
+    <div class="track-list" id="trackList">
+      <button class="track-row is-active"
+              data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
+        <div>
+          <div class="track-main">The Paradox of God</div>
+          <div class="track-meta">
+            Main narration — quiet, reflective reading
           </div>
         </div>
-      </section>
+        <div class="track-duration">04:08</div>
+      </button>
 
-            <!-- ============== MAIN CONTENT (THE REFLECTION) ================= -->
-    <div class="content">
-
-      <p>Anyone who claims to know the full truth about God speaks from illusion. For how can the finite explain the infinite? How can a single mind, bound by language and time, contain something that has no edges, no beginning, no name?</p>
-
-      <p>To speak of God is already to limit what cannot be limited. Each word becomes a frame — and the moment you frame the infinite, you lose it. So we do not describe God. We only describe our experience of not knowing.</p>
-
-      <p><strong>Belief is not truth.</strong></p>
-
-      <p>Belief is the bridge we build across uncertainty — but truth is the ocean beneath it. We walk on belief because we fear the deep — the unknown, the silence, the mystery. When we cannot explain a thing, we give it God’s name — thunder, creation, consciousness, death. In doing so, we comfort ourselves not with understanding, but with closure.</p>
-
-      <p>To say “God did it” often means: “I do not understand it.” And that is fine — until we begin preaching our uncertainty as absolute truth.</p>
-
-      <p>Every culture creates God in its own image — gentle or wrathful, distant or intimate — because the idea of God mirrors the human condition. We fear the unknown, so we name it. We crave meaning, so we imagine a giver of meaning. We suffer, so we imagine a healer.</p>
-
-      <p>But what if God is not someone we can describe, but the very space that allows all descriptions to exist?</p>
-
-      <p>To admit we do not understand God is not weakness — it is honesty. And honesty is where wisdom begins. The more tightly we cling to our definitions, the farther we move from truth. Maybe silence is the only sacred language left — for silence never lies.</p>
-
-      <p>In silence, we do not define God. We listen to the mystery.</p>
-
-      <p>The wisest thing ever said about God may simply be the confession: <em>I do not know.</em></p>
-
+      <button class="track-row"
+              data-src="/reflections/pages/the-paradox-of-god/theshieldoftranscendence.mp3?v=1">
+        <div>
+          <div class="track-main">
+            The Shield Of Transcendence (Alternate Voice)
+          </div>
+          <div class="track-meta">
+            Cinematic or deeper-toned narration
+          </div>
+        </div>
+        <div class="track-duration">04:33</div>
+      </button>
     </div>
+  </section>
 
+  <!-- ===== Reading content ===== -->
+  <main class="page-shell">
+    <article class="reading-card">
+      <h1>The Paradox of God</h1>
+      <div class="subtitle">
+        A Solitude Reflection by Ninox Antolihao<br>
+        On belief, truth, and the mystery that cannot be named.
+      </div>
 
-          <!--================ FOOTER ================ -->
-    <footer>
-      <p>© 2025 Ninox Antolihao · First Edition — Stone Grill Press · Leyte, Philippines</p>
-    </footer>
+      <!-- 👉 Paste / adjust your full reflection text inside here -->
+      <p class="dropcap">
+        Anyone who claims to know the full truth about God speaks from
+        illusion. For how can the finite explain the infinite? How can a
+        single mind, bound by language and memory and fear, hold the total
+        knowledge of a reality it did not create?
+      </p>
 
+      <p>
+        Yet this is what many religions quietly promise: certainty. A God
+        perfectly mapped, fully defined, with motives explained and plans
+        decoded. Do this, believe this, repeat this — and the mystery
+        becomes manageable, safe, familiar.
+      </p>
+
+      <p>
+        But if there is a divine reality, it would not shrink to fit inside
+        our categories. It would not be limited by our metaphors or bound
+        by our scriptures. It would be larger than our favourite story about
+        it — including this one.
+      </p>
+
+      <!-- Add the rest of your paragraphs here as you like -->
+
+      <hr>
+
+      <p style="font-size:.9rem;color:var(--muted);">
+        These thoughts are not theology or doctrine. They are simply one
+        person’s attempt to sit honestly with doubt, faith, and the
+        possibility that the most sacred answer might be:
+        <em>“I do not know — but I am listening.”</em>
+      </p>
+    </article>
   </main>
 
-          <!-- =========== UNIFIED HEADER JS + MENU LOGIC =================== -->
-  <script src="/reflections/assets/reflections-header.js?v=22" defer></script>
+  <!-- Shared header / nav logic -->
+  <script src="/reflections/assets/reflections-header.js"></script>
 
-
-          <!-- =========== SERVICE WORKER  (PWA OFFLINE SUPPORT) =================== -->
+  <!-- Track switching logic -->
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('/reflections/sw.js')
-        .then(() => console.log("SW registered for Reflections"))
-        .catch(err => console.log("SW registration failed:", err));
-    }
-  </script>
+    (function () {
+      const audio = document.getElementById('reflectionAudio');
+      const source = document.getElementById('audioSource');
+      const rows  = document.querySelectorAll('.track-row');
 
+      rows.forEach(row => {
+        row.addEventListener('click', () => {
+          const newSrc = row.getAttribute('data-src');
+          if (!newSrc) return;
+
+          // Switch active state
+          rows.forEach(r => r.classList.remove('is-active'));
+          row.classList.add('is-active');
+
+          // Swap audio source
+          source.src = newSrc;
+          audio.load();
+          audio.play().catch(() => {/* user may not have tapped yet */});
+        });
+      });
+    })();
+  </script>
 </body>
 </html>
