--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,14 +4,14 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
+  <!-- ===== SEO BASICS ===== -->
   <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
-
-  <!-- SEO -->
   <meta name="description"
         content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
-  <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+  <link rel="canonical"
+        href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-  <!-- Open Graph -->
+  <!-- ===== OPEN GRAPH / SOCIAL ===== -->
   <meta property="og:type" content="article">
   <meta property="og:title" content="The Paradox of God — Solitude Reflections">
   <meta property="og:description"
@@ -21,13 +21,26 @@
   <meta property="og:url"
         content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
 
-  <link rel="icon" href="/reflections/assets/favicon.ico" />
+  <!-- (Optional) Twitter card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
+  <meta name="twitter:description"
+        content="A reflection on belief, truth, and the courage to live with mystery.">
+  <meta name="twitter:image"
+        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
 
-  <!-- Shared header styles -->
+  <!-- ===== PWA / ICONS ===== -->
+  <meta name="theme-color" content="#ff6b3d">
+  <link rel="manifest" href="/reflections/manifest.json">
+  <link rel="icon" href="/reflections/assets/favicon.ico">
+  <link rel="apple-touch-icon" sizes="180x180"
+        href="/reflections/icon-180.png">
+
+  <!-- ===== SHARED HEADER STYLES ===== -->
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css" />
 
   <style>
-    /* ===== Page theme (warm, bookish) ===== */
+    /* ===== Palette (warm, bookish) ===== */
     :root{
       --bg:#1f1815;
       --paper:#2a211e;
@@ -43,78 +56,37 @@
       padding:0;
       background:var(--bg);
       color:var(--ink);
-      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
-                   sans-serif;
+      font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
+    }
+
+    /* spacer so content clears the fixed header */
+    .page-spacer{
+      height:0;
+      margin-top:4.8rem;
+    }
+    @media (min-width:768px){
+      .page-spacer{ margin-top:5.3rem; }
     }
 
     .page-shell{
       max-width:900px;
       margin:0 auto 4rem auto;
-      padding:5.5rem 1.2rem 3rem;  /* leave room for fixed header */
+      padding:0 1.2rem 3rem;
       box-sizing:border-box;
     }
-
     @media (min-width:768px){
-      .page-shell{
-        padding:6.5rem 0 4rem;
-      }
+      .page-shell{ padding:0 0 4rem; }
     }
 
-    .reading-card{
-      background:var(--paper);
-      border-radius:18px;
-      padding:2rem 1.5rem 2.5rem;
-      box-shadow:0 18px 40px rgba(0,0,0,.45);
-      line-height:1.7;
-      font-size:1.02rem;
-    }
-
-    @media (min-width:768px){
-      .reading-card{
-        padding:2.5rem 2.7rem 3rem;
-        font-size:1.06rem;
-      }
-    }
-
-    h1{
-      font-family: "Georgia","Times New Roman",serif;
-      margin:0 0 .4rem;
-      font-size:2.1rem;
-      letter-spacing:.02em;
-    }
-
-    .subtitle{
-      font-family:"Georgia","Times New Roman",serif;
-      font-style:italic;
-      color:var(--muted);
-      margin-bottom:2rem;
-      font-size:.98rem;
-    }
-
-    p{
-      margin:0 0 1.15rem;
-    }
-
-    .dropcap:first-letter{
-      float:left;
-      font-size:2.7rem;
-      line-height:1;
-      padding-right:.27rem;
-      padding-top:.16rem;
-      font-family:"Georgia","Times New Roman",serif;
-      color:var(--accent);
-    }
-
-    hr{
-      border:none;
-      border-top:1px solid var(--rule);
-      margin:1.8rem 0;
-    }
-
-    /* ===== Audio block with track list ===== */
+    /* ===== Audio block + playlist ===== */
     .audio-shell{
-      margin:0 auto 2.2rem auto;
       max-width:900px;
+      margin:0 auto 2.2rem auto;
+      padding:0 1.2rem;
+      box-sizing:border-box;
+    }
+    @media (min-width:768px){
+      .audio-shell{ padding:0; }
     }
 
     .audio-player{
@@ -125,7 +97,6 @@
       border:1px solid #000;
       border-bottom:none;
     }
-
     .audio-player audio{
       width:100%;
       display:block;
@@ -155,23 +126,18 @@
       font:inherit;
       border-bottom:1px solid rgba(255,255,255,.04);
     }
-
-    .track-row:last-child{
-      border-bottom:none;
-    }
+    .track-row:last-child{ border-bottom:none; }
 
     .track-main{
       font-family:"Georgia","Times New Roman",serif;
       font-size:1.02rem;
       font-weight:600;
     }
-
     .track-meta{
       font-size:.86rem;
       color:var(--muted);
       margin-top:.22rem;
     }
-
     .track-duration{
       font-size:.9rem;
       white-space:nowrap;
@@ -184,37 +150,72 @@
       background:var(--accent-soft);
       box-shadow:inset 0 0 0 1px rgba(255,184,115,.55);
     }
-
     .track-row.is-active .track-duration{
       color:var(--ink);
     }
-
     .track-row:active{
       transform:scale(.99);
     }
 
-    /* Small helper below header so the title doesn't hide under it */
-    .page-spacer{
-      height:0;
-      margin-top:4.7rem;
+    /* ===== Reading card ===== */
+    .reading-card{
+      background:var(--paper);
+      border-radius:18px;
+      padding:2rem 1.5rem 2.5rem;
+      box-shadow:0 18px 40px rgba(0,0,0,.45);
+      line-height:1.7;
+      font-size:1.02rem;
+    }
+    @media (min-width:768px){
+      .reading-card{
+        padding:2.5rem 2.7rem 3rem;
+        font-size:1.06rem;
+      }
     }
 
-    @media (min-width:768px){
-      .page-spacer{
-        margin-top:5.3rem;
-      }
+    h1{
+      font-family:"Georgia","Times New Roman",serif;
+      margin:0 0 .4rem;
+      font-size:2.1rem;
+      letter-spacing:.02em;
+    }
+    .subtitle{
+      font-family:"Georgia","Times New Roman",serif;
+      font-style:italic;
+      color:var(--muted);
+      margin-bottom:2rem;
+      font-size:.98rem;
+    }
+
+    p{
+      margin:0 0 1.15rem;
+    }
+
+    .dropcap:first-letter{
+      float:left;
+      font-size:2.7rem;
+      line-height:1;
+      padding-right:.27rem;
+      padding-top:.16rem;
+      font-family:"Georgia","Times New Roman",serif;
+      color:var(--accent);
+    }
+
+    hr{
+      border:none;
+      border-top:1px solid var(--rule);
+      margin:1.8rem 0;
     }
   </style>
 </head>
 <body>
 
-  <!-- Fixed shared header injected by JS -->
-  <div id="reflectionsHeader"
-       data-current="the-paradox-of-god"></div>
+  <!-- ===== SHARED HEADER (Back / Share / Audio / Title) ===== -->
+  <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
 
   <div class="page-spacer"></div>
 
-  <!-- ===== Audio + track list ===== -->
+  <!-- ===== Audio + playlist ===== -->
   <section class="audio-shell">
     <div class="audio-player">
       <audio id="reflectionAudio" controls preload="metadata">
@@ -261,7 +262,7 @@
         On belief, truth, and the mystery that cannot be named.
       </div>
 
-      <!-- 👉 Paste / adjust your full reflection text inside here -->
+      <!-- START REFLECTION TEXT -->
       <p class="dropcap">
         Anyone who claims to know the full truth about God speaks from
         illusion. For how can the finite explain the infinite? How can a
@@ -283,7 +284,8 @@
         it — including this one.
       </p>
 
-      <!-- Add the rest of your paragraphs here as you like -->
+      <!-- add the rest of your paragraphs here -->
+      <!-- END REFLECTION TEXT -->
 
       <hr>
 
@@ -296,10 +298,10 @@
     </article>
   </main>
 
-  <!-- Shared header / nav logic -->
+  <!-- ===== SHARED HEADER / NAV LOGIC ===== -->
   <script src="/reflections/assets/reflections-header.js"></script>
 
-  <!-- Track switching logic -->
+  <!-- ===== SIMPLE TRACK SWITCHING ===== -->
   <script>
     (function () {
       const audio = document.getElementById('reflectionAudio');
@@ -311,17 +313,31 @@
           const newSrc = row.getAttribute('data-src');
           if (!newSrc) return;
 
-          // Switch active state
           rows.forEach(r => r.classList.remove('is-active'));
           row.classList.add('is-active');
 
-          // Swap audio source
           source.src = newSrc;
           audio.load();
-          audio.play().catch(() => {/* user may not have tapped yet */});
+          audio.play().catch(() => {});
         });
       });
     })();
   </script>
+
+  <!-- ===== SERVICE WORKER REGISTRATION ===== -->
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', function () {
+        navigator.serviceWorker
+          .register('/reflections/sw.js')
+          .catch(function () {
+            // silent fail; page still works
+          });
+      });
+    }
+  </script>
+
+  <!-- (Optional) Analytics / pixels can be added here if needed -->
+
 </body>
 </html>
