--- a/reflections/pages/the-paradox-of-god/read.html
+++ b/reflections/pages/the-paradox-of-god/read.html
@@ -4,39 +4,45 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <!-- ===== SEO BASICS ===== -->
-  <title>The Paradox of God — Solitude Reflections · Ninox Antolihao</title>
+  <!-- ================= SEO (CHANGE PER REFLECTION) ================= -->
+  <!-- CHANGE THIS: Page title -->
+  <title>Reflection Title Here — Solitude Reflections · Ninox Antolihao</title>
+
+  <!-- CHANGE THIS: Short description (1–2 sentences) -->
   <meta name="description"
-        content="A quiet, honest reflection on the limits of belief, the mystery of God, and the humility of saying: I do not know.">
+        content="Short one-line summary of this reflection for search and social previews.">
+
+  <!-- CHANGE THIS: Canonical URL for this page -->
   <link rel="canonical"
-        href="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+        href="https://stonegrillresto.net/reflections/pages/your-slug-here/read.html">
 
-  <!-- ===== OPEN GRAPH / SOCIAL ===== -->
+  <!-- ================= SOCIAL PREVIEW / OPEN GRAPH ================= -->
+  <!-- CHANGE: title, description, image, url to match this reflection -->
   <meta property="og:type" content="article">
-  <meta property="og:title" content="The Paradox of God — Solitude Reflections">
+  <meta property="og:title"
+        content="Reflection Title Here — Solitude Reflections">
   <meta property="og:description"
-        content="A reflection on belief, truth, and the courage to live with mystery.">
+        content="Short one-line summary of this reflection for social sharing.">
   <meta property="og:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
+        content="https://stonegrillresto.net/reflections/pages/your-slug-here/cover-image.jpg">
   <meta property="og:url"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/read.html">
+        content="https://stonegrillresto.net/reflections/pages/your-slug-here/read.html">
 
-  <!-- (Optional) Twitter card -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="The Paradox of God — Solitude Reflections">
+  <meta name="twitter:title" content="Reflection Title Here">
   <meta name="twitter:description"
-        content="A reflection on belief, truth, and the courage to live with mystery.">
+        content="Short one-line summary of this reflection for social sharing.">
   <meta name="twitter:image"
-        content="https://stonegrillresto.net/reflections/pages/the-paradox-of-god/paradoxofgod-cover.jpg">
+        content="https://stonegrillresto.net/reflections/pages/your-slug-here/cover-image.jpg">
 
-  <!-- ===== PWA / ICONS ===== -->
+  <!-- ================= PWA / ICONS (SAME FOR ALL) ================= -->
   <meta name="theme-color" content="#ff6b3d">
   <link rel="manifest" href="/reflections/manifest.json">
   <link rel="icon" href="/reflections/assets/favicon.ico">
   <link rel="apple-touch-icon" sizes="180x180"
         href="/reflections/icon-180.png">
 
-  <!-- ===== SHARED HEADER STYLES ===== -->
+  <!-- ================= SHARED HEADER CSS (SAME FOR ALL) ================= -->
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css" />
 
   <style>
@@ -59,7 +65,7 @@
       font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;
     }
 
-    /* spacer so content clears the fixed header */
+    /* Space so content doesn’t hide under fixed header bar */
     .page-spacer{
       height:0;
       margin-top:4.8rem;
@@ -68,17 +74,7 @@
       .page-spacer{ margin-top:5.3rem; }
     }
 
-    .page-shell{
-      max-width:900px;
-      margin:0 auto 4rem auto;
-      padding:0 1.2rem 3rem;
-      box-sizing:border-box;
-    }
-    @media (min-width:768px){
-      .page-shell{ padding:0 0 4rem; }
-    }
-
-    /* ===== Audio block + playlist ===== */
+    /* ===== Audio section ===== */
     .audio-shell{
       max-width:900px;
       margin:0 auto 2.2rem auto;
@@ -158,6 +154,16 @@
     }
 
     /* ===== Reading card ===== */
+    .page-shell{
+      max-width:900px;
+      margin:0 auto 4rem auto;
+      padding:0 1.2rem 3rem;
+      box-sizing:border-box;
+    }
+    @media (min-width:768px){
+      .page-shell{ padding:0 0 4rem; }
+    }
+
     .reading-card{
       background:var(--paper);
       border-radius:18px;
@@ -179,6 +185,7 @@
       font-size:2.1rem;
       letter-spacing:.02em;
     }
+
     .subtitle{
       font-family:"Georgia","Times New Roman",serif;
       font-style:italic;
@@ -210,98 +217,91 @@
 </head>
 <body>
 
-  <!-- ===== SHARED HEADER (Back / Share / Audio / Title) ===== -->
-  <div id="reflectionsHeader" data-current="the-paradox-of-god"></div>
+  <!-- ============ TOP HEADER BAR (SAME FOR ALL PAGES) ============ -->
+  <!-- CHANGE THIS: data-current must match the folder/slug of this reflection -->
+  <div id="reflectionsHeader" data-current="your-slug-here"></div>
 
   <div class="page-spacer"></div>
 
-  <!-- ===== Audio + playlist ===== -->
+  <!-- ============ AUDIO + PLAYLIST ============ -->
   <section class="audio-shell">
     <div class="audio-player">
       <audio id="reflectionAudio" controls preload="metadata">
+        <!-- CHANGE THIS: default audio track (Track 1) -->
         <source id="audioSource"
-                src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1"
+                src="/reflections/pages/your-slug-here/audio-track-1.mp3"
                 type="audio/mpeg">
         Your browser does not support the audio element.
       </audio>
     </div>
 
     <div class="track-list" id="trackList">
+      <!-- TRACK 1 (CHANGE LABELS + FILE NAME) -->
       <button class="track-row is-active"
-              data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3?v=1">
+              data-src="/reflections/pages/your-slug-here/audio-track-1.mp3">
         <div>
-          <div class="track-main">The Paradox of God</div>
-          <div class="track-meta">
-            Main narration — quiet, reflective reading
-          </div>
+          <div class="track-main">Track 1 title here</div>
+          <div class="track-meta">Short description of track 1 (voice / style).</div>
         </div>
-        <div class="track-duration">04:08</div>
+        <div class="track-duration">00:00</div>
       </button>
 
+      <!-- TRACK 2 (OPTIONAL – REMOVE IF ONLY 1 TRACK) -->
       <button class="track-row"
-              data-src="/reflections/pages/the-paradox-of-god/theshieldoftranscendence.mp3?v=1">
+              data-src="/reflections/pages/your-slug-here/audio-track-2.mp3">
         <div>
-          <div class="track-main">
-            The Shield Of Transcendence (Alternate Voice)
-          </div>
-          <div class="track-meta">
-            Cinematic or deeper-toned narration
-          </div>
+          <div class="track-main">Track 2 title here</div>
+          <div class="track-meta">Short description of track 2 (alternate voice / tone).</div>
         </div>
-        <div class="track-duration">04:33</div>
+        <div class="track-duration">00:00</div>
       </button>
     </div>
   </section>
 
-  <!-- ===== Reading content ===== -->
+  <!-- ============ MAIN READING CARD ============ -->
   <main class="page-shell">
     <article class="reading-card">
-      <h1>The Paradox of God</h1>
+
+      <!-- CHANGE THIS: Page title and subtitle -->
+      <h1>Reflection Title Here</h1>
       <div class="subtitle">
-        A Solitude Reflection by Ninox Antolihao<br>
-        On belief, truth, and the mystery that cannot be named.
+        Optional subtitle or tagline for this reflection.<br>
+        (You can remove this line if not needed.)
       </div>
 
-      <!-- START REFLECTION TEXT -->
+      <!-- CHANGE THIS: Actual reflection text -->
       <p class="dropcap">
-        Anyone who claims to know the full truth about God speaks from
-        illusion. For how can the finite explain the infinite? How can a
-        single mind, bound by language and memory and fear, hold the total
-        knowledge of a reality it did not create?
+        First paragraph of your reflection goes here. This line uses a
+        drop cap on the first letter to create a book-like feeling.
       </p>
 
       <p>
-        Yet this is what many religions quietly promise: certainty. A God
-        perfectly mapped, fully defined, with motives explained and plans
-        decoded. Do this, believe this, repeat this — and the mystery
-        becomes manageable, safe, familiar.
+        Continue the body text here. Add as many paragraphs as you like.
+        Each paragraph will be spaced nicely for reading, both on mobile
+        and desktop.
       </p>
 
       <p>
-        But if there is a divine reality, it would not shrink to fit inside
-        our categories. It would not be limited by our metaphors or bound
-        by our scriptures. It would be larger than our favourite story about
-        it — including this one.
+        You can also add <em>emphasis</em>, line breaks, or short sections
+        to guide the reader through your thoughts.
       </p>
 
-      <!-- add the rest of your paragraphs here -->
-      <!-- END REFLECTION TEXT -->
+      <!-- Add more <p> ... </p> as needed -->
 
       <hr>
 
+      <!-- CHANGE THIS: Small footer note / disclaimer for this reflection -->
       <p style="font-size:.9rem;color:var(--muted);">
-        These thoughts are not theology or doctrine. They are simply one
-        person’s attempt to sit honestly with doubt, faith, and the
-        possibility that the most sacred answer might be:
-        <em>“I do not know — but I am listening.”</em>
+        This reflection is a personal opinion and exploration. It is not
+        presented as doctrine, official teaching, or professional advice.
       </p>
     </article>
   </main>
 
-  <!-- ===== SHARED HEADER / NAV LOGIC ===== -->
+  <!-- ============ SHARED HEADER / NAV SCRIPT (DO NOT CHANGE) ============ -->
   <script src="/reflections/assets/reflections-header.js"></script>
 
-  <!-- ===== SIMPLE TRACK SWITCHING ===== -->
+  <!-- ============ TRACK SWITCHING LOGIC (SAME FOR ALL PAGES) ============ -->
   <script>
     (function () {
       const audio = document.getElementById('reflectionAudio');
@@ -313,18 +313,22 @@
           const newSrc = row.getAttribute('data-src');
           if (!newSrc) return;
 
+          // Update active state
           rows.forEach(r => r.classList.remove('is-active'));
           row.classList.add('is-active');
 
+          // Swap audio file
           source.src = newSrc;
           audio.load();
-          audio.play().catch(() => {});
+          audio.play().catch(() => {
+            // ignore autoplay block
+          });
         });
       });
     })();
   </script>
 
-  <!-- ===== SERVICE WORKER REGISTRATION ===== -->
+  <!-- ============ SERVICE WORKER (SAME FOR ALL PAGES) ============ -->
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function () {
@@ -336,8 +340,5 @@
       });
     }
   </script>
-
-  <!-- (Optional) Analytics / pixels can be added here if needed -->
-
 </body>
 </html>
